--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'B-yekan';
+  font-size: 13px;
 }
 input::placeholder {
   font-size: 10px !important;
