completed folder statistics in dashboard

--- a/src/components/dashboard/index.module.css
+++ b/src/components/dashboard/index.module.css
@@ -11,3 +11,9 @@
   justify-content: center;
   align-items: center;
 }
+.statistics__container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
