--- a/src/components/dashboard/index.module.css
+++ b/src/components/dashboard/index.module.css
@@ -1,8 +1,7 @@
 .dashboard_page__container {
-  height: 100vh;
-  width: 100vw;
+  height: auto;
+  width: auto;
   background-size: cover;
-  background-repeat: no-repeat;
   background-image: url('../../../public/images/background.png');
 }
 .option_list__container {
