improved navbar links ux to perform better and resized input width

--- a/src/components/dashboard/header/header.module.css
+++ b/src/components/dashboard/header/header.module.css
@@ -34,3 +34,9 @@ li span svg {
 .right_side__container {
   display: flex;
 }
+.navbar_link__container {
+  cursor: pointer;
+}
+.navbar_link__container > p:hover {
+  color: cornflowerblue !important;
+}
